# tree-sitter-bruno

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-bruno.pc.in
bindings/c/tree_sitter/: tree-sitter-bruno.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_bruno/: __init__.py  __init__.pyi  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterBrunoTests/: TreeSitterBrunoTests.swift
plugin/: init.lua
queries/: folds.scm  highlights.scm  indents.scm  injections.scm  tags.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: body.txt  real.txt  scripts.txt
